provisioning/stream/kubernetes/templates/storage-writer-reader/statefulset.yaml
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: stream-storage-writer-reader
  namespace: $NAMESPACE
  labels:
    app: stream-storage-writer-reader
    releaseId: $RELEASE_ID
spec:
  replicas: $STREAM_STORAGE_READER_WRITER_REPLICAS
  selector:
    matchLabels:
      app: stream-storage-writer-reader
  serviceName: "stream-storage-writer-reader"
  template:
    metadata:
      labels:
        app: stream-storage-writer-reader
        releaseId: $RELEASE_ID
        stream-etcd-client: "true"
        tags.datadoghq.com/env: "$KEBOOLA_STACK"
        tags.datadoghq.com/service: "stream"
        tags.datadoghq.com/version: "$RELEASE_ID"
      annotations:
        log: "true"
        ad.datadoghq.com/tags: '{"git.commit.sha": "$COMMIT_HASH", "git.repository_url": "github.com/keboola/keboola-as-code"}'
        ad.datadoghq.com/stream-storage-writer.checks: |
          {
            "openmetrics": {
              "instances": [
                {
                  "openmetrics_endpoint": "http://%%host%%:9001/metrics",
                  "metrics": [".*"],
                  "collect_histogram_buckets": true,
                  "histogram_buckets_as_distributions": true,
                  "tag_by_endpoint": false
                }
              ]
            }
          }
        ad.datadoghq.com/stream-storage-reader.checks: |
          {
            "openmetrics": {
              "instances": [
                {
                  "openmetrics_endpoint": "http://%%host%%:9002/metrics",
                  "metrics": [".*"],
                  "collect_histogram_buckets": true,
                  "histogram_buckets_as_distributions": true,
                  "tag_by_endpoint": false
                }
              ]
            }
          }
    spec:
      serviceAccountName: stream-identity
      terminationGracePeriodSeconds: 600
      containers:
        - name: stream-storage-writer
          image: $STREAM_IMAGE_REPOSITORY:$STREAM_IMAGE_TAG
          command: ["/app/service"]
          args: [
              "--config-file",
              "/stream/config/config.yaml",
              "storage-writer",
            ] # run storage writer component
          resources:
            requests:
              cpu: "$STREAM_STORAGE_WRITER_CPU_SOFT_LIMIT"
              memory: "$STREAM_STORAGE_WRITER_MEMORY_SOFT_LIMIT" # also GOMEMLIMIT soft limit
            limits:
              memory: "$STREAM_STORAGE_WRITER_MEMORY_HARD_LIMIT"
          ports:
            - name: writer-tcp
              containerPort: 6000
              protocol: TCP
            - name: writer-udp
              containerPort: 6000
              protocol: UDP
            - containerPort: 9001 # metrics
          volumeMounts:
            - name: config
              mountPath: /stream/config
              readOnly: true
            - name: medium-001
              mountPath: /stream/volumes/medium/medium-001
        - name: stream-storage-reader
          image: $STREAM_IMAGE_REPOSITORY:$STREAM_IMAGE_TAG
          command: ["/app/service"]
          args: [
              "--config-file",
              "/stream/config/config.yaml",
              "storage-reader",
            ] # run storage reader component
          resources:
            requests:
              cpu: "$STREAM_STORAGE_READER_CPU_SOFT_LIMIT"
              memory: "$STREAM_STORAGE_READER_MEMORY_SOFT_LIMIT" # also GOMEMLIMIT soft limit
            limits:
              memory: "$STREAM_STORAGE_READER_MEMORY_HARD_LIMIT"
          ports:
            - containerPort: 9002 # metrics
          volumeMounts:
            - name: config
              mountPath: /stream/config
              readOnly: true
            - name: medium-001
              mountPath: /stream/volumes/medium/medium-001
      volumes:
        - name: config
          configMap:
            name: stream-config
            items:
              - key: config.yaml
                path: config.yaml
      nodeSelector:
        nodepool: main
  volumeClaimTemplates:
    # Storage classes: $STREAM_VOLUME_FAST_STORAGE_CLASS_NAME / $STREAM_VOLUME_MEDIUM_STORAGE_CLASS_NAME / $STREAM_VOLUME_SLOW_STORAGE_CLASS_NAME
    # Edit also writer and reader containers "volumeMounts" section!
    - metadata:
        name: medium-001
      spec:
        accessModes: ["ReadWriteOnce"] # or ReadWriteOncePod
        storageClassName: "$STREAM_VOLUME_MEDIUM_STORAGE_CLASS_NAME"
        resources:
          requests:
            storage: "$STREAM_VOLUME_MEDIUM_STORAGE_SIZE"
