provisioning/stream/kubernetes/templates/storage-writer-reader/service.yaml
---
# https://kubernetes.io/docs/concepts/services-networking/service/#headless-services
# Headless service, so HTTP Source node can resolve Disk Writer node address.
kind: Service
apiVersion: v1
metadata:
  name: stream-storage-writer-reader
  namespace: $NAMESPACE
  labels:
    app: stream-storage-writer-reader
spec:
  type: ClusterIP
  clusterIP: None # headless service
  selector:
    app: stream-storage-writer-reader
  ports:
    - name: writer-tcp
      protocol: TCP
      port: 6000
      targetPort: writer-tcp
    - name: writer-udp
      protocol: UDP
      port: 6000
      targetPort: writer-udp
